Feat: Base entity